[UPD] BOJ Algorithm Gold 1p(DP)

--- a/Algorithm/.vscode/settings.json
+++ b/Algorithm/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "실전코테",
-        "EnterpriseTest"
+        "EnterpriseTest",
+        ".vscode",
+        "test"
     ]
 }
