--- a/Algorithm/.vscode/settings.json
+++ b/Algorithm/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "test",
         "EnterpriseTest",
         ".vscode",
-        "test"
+        "Programmers"
     ]
 }
