--- a/Algorithm/.vscode/settings.json
+++ b/Algorithm/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "java.project.sourcePaths": [
         "test",
+        "Programmers",
         "EnterpriseTest",
         ".vscode",
-        "Programmers"
+        "TestCode"
     ]
 }
