Add leetcode Alogirithm 2p(DP), fix leetcode pacakage

--- a/Algorithm/.vscode/settings.json
+++ b/Algorithm/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
     "java.project.sourcePaths": [
-        "test",
-        "Programmers",
-        "EnterpriseTest",
-        ".vscode",
-        "TestCode"
+        "LeetCode"
     ]
 }
